--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/node": "^24.10.2",
         "cross-env": "^10.1.0",
         "eslint": "^8.57.0",
+        "eslint-plugin-vue": "^10.6.2",
         "husky": "^9.1.7",
         "jest": "^30.2.0",
         "jest-serial-runner": "^1.2.2",
