ci: exclude rapiq in depdendabot prod bundle

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,6 +25,7 @@ updates:
               exclude-patterns:
                   - "prom-client"
                   - "nanoid"
+                  - "rapiq"
               update-types:
                   - "major"
           majorDev:
