--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "packages/*"
     ],
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^29.0.0",
+        "@rollup/plugin-esm-shim": "^0.1.8",
         "@rollup/plugin-node-resolve": "^16.0.3",
         "@swc/core": "^1.15.7",
         "@swc/jest": "^0.2.39",
@@ -32,6 +34,7 @@
         "rollup": "^4.54.0",
         "ts-jest": "^29.4.6",
         "typescript": "5.9.3",
+        "unplugin-swc": "^1.5.9",
         "workspaces-publish": "^1.5.0"
     },
     "scripts": {
