--- a/packages/client-vue/package.json
+++ b/packages/client-vue/package.json
@@ -3,7 +3,6 @@
     "version": "0.8.21",
     "license": "Apache-2.0",
     "description": "This package contains vue components.",
-    "main": "dist/index.cjs",
     "module": "dist/index.mjs",
     "types": "dist/index.d.ts",
     "style": "dist/index.css",
@@ -12,8 +11,7 @@
         "./dist/index.css": "./dist/index.css",
         ".": {
             "types": "./dist/index.d.ts",
-            "import": "./dist/index.mjs",
-            "require": "./dist/index.cjs"
+            "import": "./dist/index.mjs"
         }
     },
     "files": [
@@ -41,12 +39,12 @@
     },
     "homepage": "https://github.com/PrivateAim/hub#readme",
     "devDependencies": {
-        "@authup/client-web-kit": "^1.0.0-beta.27",
-        "@authup/core-kit": "^1.0.0-beta.27",
-        "@authup/core-http-kit": "^1.0.0-beta.27",
-        "@authup/core-realtime-kit": "^1.0.0-beta.27",
-        "@authup/kit": "^1.0.0-beta.27",
-        "@ilingo/vuelidate": "^5.0.4",
+        "@authup/client-web-kit": "^1.0.0-beta.28",
+        "@authup/core-kit": "^1.0.0-beta.28",
+        "@authup/core-http-kit": "^1.0.0-beta.28",
+        "@authup/core-realtime-kit": "^1.0.0-beta.28",
+        "@authup/kit": "^1.0.0-beta.28",
+        "@ilingo/vuelidate": "^6.0.0",
         "@privateaim/kit": "^0.8.21",
         "@privateaim/core-kit": "^0.8.21",
         "@privateaim/telemetry-kit": "^0.8.21",
@@ -71,7 +69,7 @@
         "smob": "^1.5.0",
         "socket.io-client": "^4.8.2",
         "vue": "^3.5.26",
-        "vue-tsc": "^3.2.1",
+        "vue-tsc": "^3.2.2",
         "vue3-form-wizard": "0.3.5"
     },
     "peerDependencies": {
