--- a/packages/kit/package.json
+++ b/packages/kit/package.json
@@ -1,19 +1,18 @@
 {
     "name": "@privateaim/kit",
+    "type": "module",
     "version": "0.8.21",
     "license": "Apache-2.0",
     "description": "",
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.ts",
     "exports": {
         "./package.json": "./package.json",
         ".": {
             "types": "./dist/index.d.ts",
-            "import": "./dist/index.mjs",
-            "require": "./dist/index.cjs"
+            "import": "./dist/index.mjs"
         }
     },
-    "main": "./dist/index.cjs",
-    "module": "./dist/index.mjs",
-    "types": "./dist/index.d.ts",
     "author": {
         "name": "Peter Placzek",
         "email": "admin@tada5hi.net",
@@ -27,11 +26,11 @@
     },
     "devDependencies": {
         "@authup/kit": "^1.0.0-beta.27",
-        "@authup/core-kit": "^1.0.0-beta.27"
+        "@authup/core-kit": "^1.0.0-beta.28"
     },
     "peerDependencies": {
-        "@authup/kit": "^1.0.0-beta.27",
-        "@authup/core-kit": "^1.0.0-beta.27"
+        "@authup/kit": "^1.0.0-beta.28",
+        "@authup/core-kit": "^1.0.0-beta.28"
     },
     "dependencies": {
         "nanoid": "^3.3.8"
