--- a/packages/server-telemetry/package.json
+++ b/packages/server-telemetry/package.json
@@ -1,18 +1,17 @@
 {
     "name": "@privateaim/server-telemetry",
+    "type": "module",
     "version": "0.8.21",
     "private": true,
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.ts",
     "exports": {
         "./package.json": "./package.json",
         ".": {
             "types": "./dist/index.d.ts",
-            "import": "./dist/index.mjs",
-            "require": "./dist/index.cjs"
+            "import": "./dist/index.mjs"
         }
     },
-    "main": "./dist/index.cjs",
-    "module": "./dist/index.mjs",
-    "types": "./dist/index.d.ts",
     "author": {
         "name": "Peter Placzek",
         "email": "contact@tada5hi.net",
@@ -21,8 +20,8 @@
     "license": "Apache-2.0",
     "description": "",
     "dependencies": {
-        "@authup/kit": "^1.0.0-beta.27",
-        "@authup/core-kit": "^1.0.0-beta.27",
+        "@authup/kit": "^1.0.0-beta.28",
+        "@authup/core-kit": "^1.0.0-beta.28",
         "@ebec/http": "^2.3.0",
         "@hapic/victorialogs": "^1.0.2",
         "@hapic/vault": "^2.3.9",
@@ -61,7 +60,7 @@
         "build:types": "tsc --emitDeclarationOnly -p tsconfig.build.json",
         "build:js": "rollup -c",
         "build": "rimraf ./dist && cross-env NODE_ENV=production npm run build:js && npm run build:types",
-        "cli": "node dist/cli/index.js",
+        "cli": "node dist/cli/index.mjs",
         "test": "cross-env NODE_ENV=test jest --config ./test/jest.config.js",
         "test:coverage": "npm run test -- --coverage"
     }
