--- a/packages/storage-kit/package.json
+++ b/packages/storage-kit/package.json
@@ -1,5 +1,6 @@
 {
     "name": "@privateaim/storage-kit",
+    "type": "module",
     "version": "0.8.21",
     "license": "Apache-2.0",
     "description": "",
@@ -7,11 +8,9 @@
         "./package.json": "./package.json",
         ".": {
             "types": "./dist/index.d.ts",
-            "import": "./dist/index.mjs",
-            "require": "./dist/index.cjs"
+            "import": "./dist/index.mjs"
         }
     },
-    "main": "./dist/index.cjs",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "author": {
@@ -20,13 +19,13 @@
         "url": "https://github.com/tada5hi"
     },
     "devDependencies": {
-        "@authup/core-kit": "^1.0.0-beta.27",
+        "@authup/core-kit": "^1.0.0-beta.28",
         "@privateaim/kit": "^0.8.21",
         "hapic": "^2.7.0",
         "rapiq": "^0.9.0"
     },
     "peerDependencies": {
-        "@authup/core-kit": "^1.0.0-beta.27",
+        "@authup/core-kit": "^1.0.0-beta.28",
         "@privateaim/kit": "^0.8.21",
         "hapic": "^2.7.0",
         "rapiq": "^0.9.0"
