--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "strict": false,
         "sourceMap": true,
 
         "declaration": true,
@@ -8,16 +9,18 @@
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
 
-        "noEmitOnError": true,
-
         "skipLibCheck": true,
 
         "esModuleInterop": true,
-        "lib": ["ES2022", "DOM"],
+        "lib": ["ESNext", "DOM"],
+        // compiled code js version
         "target": "ES2022",
 
-        "moduleResolution": "Node",
-        "module": "CommonJS"
+        "moduleResolution": "bundler",
+        // compiled code format (esm/cjs)
+        "module": "ESNext",
+
+        "allowImportingTsExtensions": true
     },
     "exclude": [
         "node_modules",
