fix: client-vue build

--- a/packages/client-vue/tsconfig.build.json
+++ b/packages/client-vue/tsconfig.build.json
@@ -2,14 +2,13 @@
     "extends": "../../tsconfig.build.json",
 
     "compilerOptions": {
-        "outDir": "./dist"
+        "outDir": "./dist",
+
+        "isolatedModules": true,
+        "skipLibCheck": true
     },
-    "exclude": [
-        "node_modules",
-        "dist"
-    ],
     "include": [
-        "types/**/*.d.ts",
-        "src/**/*.ts"
+        "./src/**/*.{vue.ts}",
+        "./types/*.d.ts"
     ]
 }
