fix: server-telemetry relative imports

--- a/packages/server-telemetry/tsconfig.build.json
+++ b/packages/server-telemetry/tsconfig.build.json
@@ -5,7 +5,8 @@
         "outDir": "./dist",
         "resolveJsonModule": true,
         "strictPropertyInitialization": false,
-        "rewriteRelativeImportExtensions": true
+        "rewriteRelativeImportExtensions": true,
+        "allowImportingTsExtensions": true
     },
 
     "include": [
