--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,8 @@
         "import/no-cycle": [2, {
             "maxDepth": 2
         }],
+        "import/no-relative-packages": "off",
+        "import/extensions": "off",
         "import/no-extraneous-dependencies": ["error", {
             "devDependencies": true,
             "optionalDependencies": false,
