--- a/packages/server-telemetry/package.json
+++ b/packages/server-telemetry/package.json
@@ -9,7 +9,7 @@
         "./package.json": "./package.json",
         ".": {
             "types": "./dist/index.d.ts",
-            "import": "./dist/index.mjs"
+            "import": "./dist/index.js"
         }
     },
     "author": {
@@ -59,8 +59,8 @@
         "cli-dev": "ts-node src/cli/index.ts",
         "build:types": "tsc --emitDeclarationOnly -p tsconfig.build.json",
         "build:js": "rollup -c",
-        "build": "rimraf ./dist && cross-env NODE_ENV=production npm run build:js && npm run build:types",
-        "cli": "node dist/cli/index.mjs",
+        "build": "rimraf ./dist && cross-env NODE_ENV=production tsc -p tsconfig.build.json",
+        "cli": "node dist/cli/index.js",
         "test": "cross-env NODE_ENV=test jest --config ./test/jest.config.js",
         "test:coverage": "npm run test -- --coverage"
     }
