--- a/packages/server-http-kit/package.json
+++ b/packages/server-http-kit/package.json
@@ -2,7 +2,7 @@
     "name": "@privateaim/server-http-kit",
     "type": "module",
     "version": "0.8.21",
-    "module": "dist/index.js",
+    "module": "dist/index.mjs",
     "types": "dist/index.d.ts",
     "exports": {
         "./package.json": "./package.json",
