--- a/packages/client-vue/package.json
+++ b/packages/client-vue/package.json
@@ -79,7 +79,9 @@
         "@authup/core-realtime-kit": "^1.0.0-beta.26",
         "@authup/kit": "^1.0.0-beta.26",
         "@ilingo/vuelidate": "^5.0.4",
+        "@privateaim/kit": "^0.8.21",
         "@privateaim/core-kit": "^0.8.21",
+        "@privateaim/core-http-kit": "^0.8.21",
         "@privateaim/storage-kit": "^0.8.21",
         "@privateaim/telemetry-kit": "^0.8.21",
         "@vuecs/form-controls": "^1.3.0",
@@ -95,6 +97,7 @@
         "smob": "^1.4.x",
         "socket.io-client": "^4.8.2",
         "vue": "^3.5.26",
+        "@vueuse/core": "^14.1.0",
         "vue3-form-wizard": "^0.2.9"
     },
     "publishConfig": {
