--- a/packages/messenger-kit/package.json
+++ b/packages/messenger-kit/package.json
@@ -23,8 +23,8 @@
         "build:js": "rollup -c",
         "build": "rimraf ./dist && cross-env NODE_ENV=production npm run build:js && npm run build:types",
         "build-watch": "rimraf ./dist && tsc -p tsconfig.build.json --watch",
-        "test": "cross-env NODE_ENV=test jest --config ./test/jest.config.js",
-        "test:coverage": "npm run test -- --coverage"
+        "test": "cross-env NODE_ENV=test vitest run --config test/vitest.config.ts",
+        "test:coverage": "cross-env NODE_ENV=test vitest run --config test/vitest.config.ts --coverage"
     },
     "dependencies": {
         "@validup/adapter-zod": "^0.1.12",
@@ -32,7 +32,8 @@
         "zod": "^4.2.1"
     },
     "devDependencies": {
-        "@privateaim/core-kit": "^0.8.21"
+        "@privateaim/core-kit": "^0.8.21",
+        "vitest": "^4.0.14"
     },
     "peerDependencies": {
         "@privateaim/core-kit": "^0.8.21"
