--- a/packages/server-core-worker/package.json
+++ b/packages/server-core-worker/package.json
@@ -28,8 +28,8 @@
         "build:types": "tsc --emitDeclarationOnly -p tsconfig.build.json",
         "build:js": "rollup -c",
         "build": "rimraf ./dist && cross-env NODE_ENV=production npm run build:js && npm run build:types",
-        "test": "cross-env NODE_ENV=test jest --config ./test/jest.config.js",
-        "test:coverage": "npm run test -- --coverage"
+        "test": "cross-env NODE_ENV=test vitest run --config test/vitest.config.ts",
+        "test:coverage": "cross-env NODE_ENV=test vitest run --config test/vitest.config.ts --coverage"
     },
     "dependencies": {
         "@authup/core-http-kit": "^1.0.0-beta.28",
@@ -67,7 +67,8 @@
         "@types/tar-fs": "^2.0.4",
         "@types/tar-stream": "^3.1.4",
         "@types/uuid": "^10.0.0",
-        "ts-node": "^10.9.2"
+        "ts-node": "^10.9.2",
+        "vitest": "^4.0.14"
     },
     "publishConfig": {
         "access": "public"
