--- a/packages/server-core-worker/package.json
+++ b/packages/server-core-worker/package.json
@@ -23,8 +23,7 @@
     "scripts": {
         "lint": "eslint --ext .ts src/",
         "lint:fix": "npm run lint -- --fix",
-        "start": "node dist/start.js",
-        "dev": "ts-node src/start.ts",
+        "start": "node dist/index.mjs",
         "build:types": "tsc --emitDeclarationOnly -p tsconfig.build.json",
         "build:js": "rollup -c",
         "build": "rimraf ./dist && cross-env NODE_ENV=production npm run build:js && npm run build:types",
