--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
             -   name: Install
                 uses: ./.github/actions/install
                 with:
-                    node-version: ${{ env.PRIMARY_NODE_VERSION }}
+                    node-version: ${{ env.NODE_VERSION }}
 
             -   name: Build
                 uses: ./.github/actions/build
@@ -71,7 +71,7 @@ jobs:
              -   name: Install
                  uses: ./.github/actions/install
                  with:
-                     node-version: ${{ env.PRIMARY_NODE_VERSION }}
+                     node-version: ${{ env.NODE_VERSION }}
 
              -   name: Build
                  uses: ./.github/actions/build
