--- a/packages/server-core/package.json
+++ b/packages/server-core/package.json
@@ -22,16 +22,16 @@
         "@privateaim/core-kit": "^0.8.21",
         "@privateaim/core-realtime-kit": "^0.7.22",
         "@privateaim/kit": "^0.8.21",
-        "@privateaim/telemetry-kit": "^0.8.21",
-        "@privateaim/server-kit": "^0.8.21",
+        "@privateaim/server-core-worker-kit": "^0.7.22",
         "@privateaim/server-db-kit": "^0.8.21",
         "@privateaim/server-http-kit": "^0.8.21",
-        "@privateaim/server-core-worker-kit": "^0.7.22",
+        "@privateaim/server-kit": "^0.8.21",
         "@privateaim/server-realtime-kit": "^0.8.21",
         "@privateaim/server-storage-kit": "^0.8.21",
         "@privateaim/server-telemetry": "^0.8.21",
         "@privateaim/server-telemetry-kit": "^0.8.21",
         "@privateaim/storage-kit": "^0.8.21",
+        "@privateaim/telemetry-kit": "^0.8.21",
         "@routup/basic": "^1.4.3",
         "@routup/decorators": "^3.4.3",
         "@routup/prometheus": "^2.4.2",
@@ -43,6 +43,7 @@
         "@validup/adapter-zod": "^0.1.12",
         "amqp-extension": "^4.0.0",
         "busboy": "^1.6.0",
+        "citty": "^0.1.6",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
         "envix": "^1.3.0",
@@ -57,12 +58,11 @@
         "reflect-metadata": "^0.2.2",
         "routup": "^4.0.2",
         "singa": "^1.1.0",
-        "socket.io": "^4.8.2",
         "smob": "^1.5.0",
+        "socket.io": "^4.8.2",
         "typeorm": "^0.3.28",
         "typeorm-extension": "^3.7.3",
         "validup": "^0.1.9",
-        "yargs": "^18.0.0",
         "zod": "^4.2.1"
     },
     "devDependencies": {
@@ -71,12 +71,11 @@
         "@types/cors": "^2.8.19",
         "@types/module-alias": "^2.0.4",
         "@types/supertest": "^6.0.3",
-        "@types/yargs": "^17.0.32",
         "better-sqlite3": "^12.5.0",
         "cross-env": "^10.1.0",
         "supertest": "^7.1.4",
-        "ts-node": "^10.9.2",
         "testcontainers": "^11.10.0",
+        "ts-node": "^10.9.2",
         "vitest": "^4.0.14"
     },
     "scripts": {
