fix: initializing event component + reading event batches

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -40,3 +40,5 @@ updates:
               update-types:
                   - "patch"
                   - "minor"
+              exclude-patterns:
+                  - "eslint-plugin-vue"
