--- a/packages/server-core/package.json
+++ b/packages/server-core/package.json
@@ -12,6 +12,7 @@
     "description": "This package contains the server core service.",
     "main": "./dist/cli/index.js",
     "dependencies": {
+        "@authup/access": "^1.0.0-beta.29",
         "@authup/kit": "^1.0.0-beta.29",
         "@authup/core-kit": "^1.0.0-beta.29",
         "@authup/core-http-kit": "^1.0.0-beta.29",
