refactor: errror-, validation & authup interaction (#1417)

--- a/packages/server-core/package.json
+++ b/packages/server-core/package.json
@@ -12,9 +12,10 @@
     "description": "This package contains the server core service.",
     "main": "./dist/cli/index.js",
     "dependencies": {
-        "@authup/kit": "^1.0.0-beta.28",
-        "@authup/core-kit": "^1.0.0-beta.28",
-        "@authup/core-http-kit": "^1.0.0-beta.28",
+        "@authup/access": "^1.0.0-beta.29",
+        "@authup/kit": "^1.0.0-beta.29",
+        "@authup/core-kit": "^1.0.0-beta.29",
+        "@authup/core-http-kit": "^1.0.0-beta.29",
         "@authup/server-adapter-http": "^1.0.0-beta.28",
         "@ebec/http": "^2.3.0",
         "@hapic/harbor": "^2.5.4",
