--- a/packages/server-messenger/package.json
+++ b/packages/server-messenger/package.json
@@ -29,18 +29,18 @@
         "@privateaim/server-http-kit": "^0.8.27",
         "@privateaim/server-realtime-kit": "^0.8.27",
         "@privateaim/telemetry-kit": "^0.8.27",
+        "citty": "^0.2.1",
         "dotenv": "^17.3.1",
         "envix": "^1.3.0",
         "hapic": "^2.7.0",
         "redis-extension": "^2.0.4",
+        "reflect-metadata": "^0.2.2",
         "routup": "^4.1.0",
         "socket.io": "^4.8.2"
     },
     "scripts": {
-        "dev": "ts-node src/index.ts",
-        "build:types": "tsc --emitDeclarationOnly -p tsconfig.build.json",
-        "build:js": "rollup -c",
-        "build": "rimraf ./dist && cross-env NODE_ENV=production npm run build:js && npm run build:types",
-        "start": "node dist/index.mjs"
+        "cli": "node dist/cli/index.js",
+        "cli-dev": "ts-node src/cli/index.ts",
+        "build": "rimraf dist/ && tsc -p tsconfig.build.json"
     }
 }
