--- a/packages/server-core/package.json
+++ b/packages/server-core/package.json
@@ -80,11 +80,9 @@
         "vitest": "^4.0.18"
     },
     "scripts": {
-        "dev": "npm run cli -- start",
-        "start": "node dist/cli/index.js start",
-        "build": "rimraf dist/ && tsc -p tsconfig.build.json",
         "cli": "node dist/cli/index.js",
         "cli-dev": "ts-node src/cli/index.ts",
+        "build": "rimraf dist/ &&  cross-env NODE_ENV=production tsc -p tsconfig.build.json",
         "test": "cross-env NODE_ENV=test vitest run --config test/vitest.config.ts",
         "test:coverage": "cross-env NODE_ENV=test vitest run --config test/vitest.config.ts --coverage"
     },
