--- a/packages/server-storage/package.json
+++ b/packages/server-storage/package.json
@@ -61,6 +61,7 @@
         "@types/supertest": "^6.0.3",
         "@types/tar-stream": "^3.1.4",
         "testcontainers": "^11.10.0",
+        "ts-node": "^10.9.2",
         "vitest": "^4.0.18"
     },
     "scripts": {
