--- a/packages/server-storage/package.json
+++ b/packages/server-storage/package.json
@@ -56,6 +56,7 @@
         "zod": "^4.3.6"
     },
     "devDependencies": {
+        "@faker-js/faker": "^10.3.0",
         "@types/busboy": "^1.5.3",
         "@types/cors": "^2.8.19",
         "@types/supertest": "^6.0.3",
