--- a/packages/server-telemetry/package.json
+++ b/packages/server-telemetry/package.json
@@ -52,6 +52,7 @@
         "validup": "^0.2.1"
     },
     "devDependencies": {
+        "@faker-js/faker": "^10.3.0",
         "@types/cors": "^2.8.19",
         "@types/supertest": "^6.0.3",
         "testcontainers": "^11.10.0",
